--- a/composer.json
+++ b/composer.json
@@ -15,12 +15,18 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^8.0",
-        "orchestra/testbench": "^5.0",
+        "orchestra/testbench": "^6.0",
         "friendsofphp/php-cs-fixer": "^2.16"
     },
     "autoload": {
         "psr-4": {
             "Jeka\\Money\\": "src/",
+            "Jeka\\Money\\Database\\Factories\\": "database/factories/",
+            "Jeka\\Money\\Database\\Seeders\\": "database/seeders/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
             "Jeka\\Money\\Tests\\": "tests/"
         }
     },
