--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
     ],
     "require": {
         "php": "^7.3",
-        "laravel/framework": "^7.0|^8.0"
+        "laravel/framework": "^7.0|^8.0",
+        "nevadskiy/laravel-uuid": "^0.2.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.0",
