--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
     ],
     "require": {
         "php": "^7.3",
+        "ext-intl": "*",
         "laravel/framework": "^7.0|^8.0",
         "nevadskiy/laravel-uuid": "^0.2.0"
     },
