--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
     "require-dev": {
         "phpunit/phpunit": "^8.0",
         "orchestra/testbench": "^6.0",
-        "friendsofphp/php-cs-fixer": "^2.16"
+        "friendsofphp/php-cs-fixer": "^2.16",
+        "jeka/cs-fixer-rules": "*"
     },
     "autoload": {
         "psr-4": {
@@ -42,5 +43,14 @@
     "scripts": {
         "test": "phpunit --colors=always",
         "fix": "php-cs-fixer fix"
-    }
+    },
+    "repositories": [
+        {
+            "type": "path",
+            "url": "../cs-fixer-rules",
+            "options": {
+                "symlink": true
+            }
+        }
+    ]
 }
