--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "jeka/laravel-money",
-    "description": "The package provides money and currency features for Laravel.",
+    "description": "The package provides money and currency features for a Laravel application.",
     "license": "MIT",
     "keywords": ["money", "currency", "laravel"],
     "authors": [
@@ -18,39 +18,29 @@
     "require-dev": {
         "phpunit/phpunit": "^8.0",
         "orchestra/testbench": "^6.0",
-        "friendsofphp/php-cs-fixer": "^2.16",
-        "jeka/cs-fixer-rules": "*"
+        "friendsofphp/php-cs-fixer": "^2.16"
     },
     "autoload": {
         "psr-4": {
-            "Jeka\\Money\\": "src/",
-            "Jeka\\Money\\Database\\Factories\\": "database/factories/",
-            "Jeka\\Money\\Database\\Seeders\\": "database/seeders/"
+            "Nevadskiy\\Money\\": "src/",
+            "Nevadskiy\\Money\\Database\\Factories\\": "database/factories/",
+            "Nevadskiy\\Money\\Database\\Seeders\\": "database/seeders/"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "Jeka\\Money\\Tests\\": "tests/"
+            "Nevadskiy\\Money\\Tests\\": "tests/"
         }
     },
     "extra": {
         "laravel": {
             "providers": [
-                "Jeka\\Money\\MoneyServiceProvider"
+                "Nevadskiy\\Money\\MoneyServiceProvider"
             ]
         }
     },
     "scripts": {
         "test": "phpunit --colors=always",
         "fix": "php-cs-fixer fix"
-    },
-    "repositories": [
-        {
-            "type": "path",
-            "url": "../cs-fixer-rules",
-            "options": {
-                "symlink": true
-            }
-        }
-    ]
+    }
 }
