--- a/composer.json
+++ b/composer.json
@@ -10,14 +10,14 @@
         }
     ],
     "require": {
-        "php": "^7.2",
+        "php": "^7.3",
         "ext-intl": "*",
-        "laravel/framework": "^7.0|^8.0",
+        "laravel/framework": "^8.0",
         "nevadskiy/laravel-uuid": "^0.6.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.0",
-        "orchestra/testbench": "^5.0",
+        "orchestra/testbench": "^6.0",
         "friendsofphp/php-cs-fixer": "^2.16"
     },
     "autoload": {
