--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     "require-dev": {
         "phpunit/phpunit": "^8.0",
         "orchestra/testbench": "^6.0",
-        "friendsofphp/php-cs-fixer": "^2.16"
+        "nevadskiy/php-cs-fixer-rules": "dev-master"
     },
     "autoload": {
         "psr-4": {
@@ -42,5 +42,11 @@
     "scripts": {
         "test": "phpunit --colors=always",
         "fix": "php-cs-fixer fix"
-    }
+    },
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/nevadskiy/php-cs-fixer-rules.git"
+        }
+    ]
 }
