Add PHP 8 support

--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         }
     ],
     "require": {
-        "php": "^7.3",
+        "php": "^7.3|^8.0",
         "ext-intl": "*",
         "laravel/framework": "^8.0",
         "nevadskiy/laravel-uuid": "^0.6.0"
