--- a/composer.json
+++ b/composer.json
@@ -12,19 +12,18 @@
     "require": {
         "php": "^7.3|^8.0",
         "ext-intl": "*",
-        "laravel/framework": "^8.0",
-        "nevadskiy/laravel-uuid": "^0.7.0"
+        "laravel/framework": "^8.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.0",
         "orchestra/testbench": "^6.0",
+        "ramsey/uuid": "^3.7|^4.0",
         "nevadskiy/php-cs-fixer-rules": "dev-master"
     },
     "autoload": {
         "psr-4": {
             "Nevadskiy\\Money\\": "src/",
-            "Nevadskiy\\Money\\Database\\Factories\\": "database/factories/",
-            "Nevadskiy\\Money\\Database\\Seeders\\": "database/seeders/"
+            "Nevadskiy\\Money\\Database\\Factories\\": "database/factories/"
         }
     },
     "autoload-dev": {
