--- a/composer.json
+++ b/composer.json
@@ -12,12 +12,12 @@
     "require": {
         "php": "^7.3|^8.0",
         "ext-intl": "*",
-        "laravel/framework": "^8.0",
-        "nevadskiy/laravel-uuid": "^0.7.0"
+        "laravel/framework": "^8.0|^9.0",
+        "nevadskiy/laravel-uuid": "^1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.0",
-        "orchestra/testbench": "^6.0",
+        "orchestra/testbench": "^6.0|^7.0",
         "nevadskiy/php-cs-fixer-rules": "dev-master"
     },
     "autoload": {
