--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "require": {
         "php": "^7.3|^8.0",
         "ext-intl": "*",
-        "laravel/framework": "^8.0|^9.0"
+        "laravel/framework": "^8.0|^9.0|^10.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.0",
