--- a/composer.json
+++ b/composer.json
@@ -12,12 +12,12 @@
     "require": {
         "php": "^7.3|^8.0",
         "ext-intl": "*",
+        "ext-json": "*",
         "laravel/framework": "^8.0|^9.0|^10.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.0",
-        "orchestra/testbench": "^6.0|^7.0",
-        "nevadskiy/php-cs-fixer-rules": "dev-master"
+        "orchestra/testbench": "^6.0|^7.0|^8.0"
     },
     "autoload": {
         "psr-4": {
@@ -36,15 +36,5 @@
                 "Nevadskiy\\Money\\MoneyServiceProvider"
             ]
         }
-    },
-    "scripts": {
-        "test": "phpunit --colors=always",
-        "fix": "php-cs-fixer fix"
-    },
-    "repositories": [
-        {
-            "type": "vcs",
-            "url": "https://github.com/nevadskiy/php-cs-fixer-rules.git"
-        }
-    ]
+    }
 }
